<resources>
    <string name="app_name_final" translatable="false">Just Tap</string>
    <string name="voice">Voice</string>
    <string name="emergency">Emergency</string>
    <string name="my_healty">My Healty</string>
    <string name="tracker">GPS Tracker</string>
    <string name="Voicem">Voice</string>
    <string name="emergencym">Emergency</string>
    <string name="my_health">My Healty</string>
    <string name="in_myhealth">My Health</string>
    <string name="trackerm">GPS Tracker</string>
    <string name="title_activity_nevegation">NevegationActivity</string>
    <string name="medication">Medication Reminder</string>
    <string name="Tips">Essential Tips</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Your Phone Number</string>
    <string name="phone_number2">Trusted Person Phone Number</string>
    <string name="age">Age</string>
    <string name="T_regitser">Your Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_today">Today</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_tomorrow">Tomorrow</string>
    <string name="title_activity_add">Add Alarm!</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title_activity_alert">Alert Activity Screen</string>
    <string name="str_btn_set_alarm">Set Alarm</string>
    <string name="str_btn_cancel">Cancel</string>
    <string name="str_tv_message">Opened by Alarm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pill_name">Please insert pill name</string>
    <string name="Monday">Mo</string>
    <string name="Tuesday">Tu</string>
    <string name="Wednesday">We</string>
    <string name="Thursday">Th</string>
    <string name="Friday">Fr</string>
    <string name="Saturday">Sa</string>
    <string name="Sunday">Su</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="action_edit">edit</string>
    <string name="appwidget_text">Tap It To Call!</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">Search</string>
    <string name="help">Help</string>
    <string name="new_category">New Category</string>
    <string name="create_new">Enter New Item Name</string>
    <string name="open">Open</string>
    <string name="dialog_search_message">Hello</string>
    <string name="dialog_search_title">Search</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="title_activity_display" translatable="false">Transport Display</string>
    <string name="title_activity_gps__tracker">Map</string>
    <string name="nameerror">Enter Valid Name</string>
    <string name="invalid_age">Age must be between 15 and 75</string>
    <string name="invalid_age_trusted">Age must be between 12 and 50</string>
    <string name="emailerror">Enter Valid Email that must like "example.4@gmail.com"</string>
    <string name="passworderror">Enter Password that must contains one digit from 0-9 and lowercase-uppercase and special symbols in the list "@#$%"
         and length at least 6 characters and maximum of 20</string>
    <string name="mobileerror">Enter Valid Mobile Number that must contain numbers that length 11 and including character [+] infront that is optional </string>
    <string name="loading">Loading</string>
    <string name="map_view">Map</string>
    <string name="list_view">List</string>
    <string name="route_view">Route</string>
    <string name="filter">Filter</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="gps_network_not_enabled">GPS is Not Enabled</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="errorGPSMassage">Please enable location services</string>
    <string name="checkConnection">You are not connected to Internet, Please Turn on your Internet Connection</string>
    <string name="flashTitleError">Error !!</string>
    <string name="flashTapAgain">Tap Again To Turn Off Flash</string>
    <string name="cardTitle1">Emergency</string>
    <string name="cardContent1">Tap on Emergency To Call Your Trusted for help Or You Can Use Widget To Call</string>
    <string name="cardTitle2">Tools</string>
    <string name="cardContent2">The Most Commonly Used Tools Or Phone Settings Placed Here</string>
    <string name="cardTitle3">My Health</string>
    <string name="cardContent3">All About Your Health Care</string>
    <string name="cardTitle4">Take A Note</string>
    <string name="cardContent4">Schedule All Your Tasks And Work</string>
    <string name="cardTitle5">Popular Apps</string>
    <string name="cardContent5">All Your Popular Apps In One Place</string>
    <string name="cardTitle6">NewsPaper</string>
    <string name="cardContent6">All Your NewsPaper Do You Want To Read In One Place</string>
    <string name="cardTitle7">Communications Companies Codes</string>
    <string name="cardContent7">All communications companies Codes For Any Service Do You Want</string>
    <string name="cardTitle8">Emergency Calling Services</string>
    <string name="cardContent8">All Service and Telephone lines Do You Want To Call</string>
    <string name="loadingApps">Please Wait While Loading you\'r Apps</string>
    <string name="loadingLocation">Please Wait While Loading you\'r target elder location</string>
    <string name="titleNewsPaper">NewsPaper</string>
    <string name="toolsTitle">Tools</string>
    <string name="cardTitleTool1" translatable="false">WIFI</string>
    <string name="cardContentNull" translatable="false" />
    <string name="cardTitleTool2">Bluetooth</string>
    <string name="cardTitleTool3">Mobile Data</string>
    <string name="cardTitleTool4">Screen Option</string>
    <string name="cardTitleTool5">Dialer</string>
    <string name="cardTitleTool6">Contacts</string>
    <string name="cardTitleTool7">Massages</string>
    <string name="cardTitleTool8">Camera</string>
    <string name="cardTitleTool9">Gallary</string>
    <string name="cardTitleTool10">Calculator</string>
    <string name="cardTitleTool11">Airplan Mode</string>
    <string name="cardTitleTool12">Sound Options</string>
    <string name="healthTitle">My Healthy</string>
    <string name="cardTitleHealth1">Pill  Reminder</string>
    <string name="cardContentHealth1">Remind you to your medication doses</string>
    <string name="cardTitleHealth2">Healthy FAQs</string>
    <string name="cardContentHealth2">Answer questions about the most common diseases</string>
    <string name="faqsTitle">FAQs</string>
    <string name="cardTitleFAQs1">Diabetes</string>
    <string name="cardContentFAQs1"><li><b>Diabetes</b> is a disease that occurs when your blood glucose, also called blood sugar, is too high.\n</li>
        <li>Blood glucose is your main source of energy and comes from the food you eat.\n</li>
        <li><b>Insulin,</b> a hormone made by the pancreas, helps glucose from food get into your cells to be used for energy.\n</li>
        <li>Sometimes your body doesn’t make enough—or any—insulin or doesn’t use insulin well.\n</li>
        <li>Glucose then stays in your blood and doesn’t reach your cells.</li></string>
    <string name="DiabetesTreatment"><li><b>Insulin</b>
        Everyone with Type 1 diabetes, and some people with Type 2 diabetes, need to take insulin to control their blood glucose (sugar) levels,
        If you need help injecting yourself.</li>
    </string>
    <string name="DiabetesLink1">
        <li><a href="https://www.nhsinform.scot/illnesses-and-conditions/diabetes/diabetes">NHF inform link</a></li>
        \n \n
        <li><a href="http://www.diabetes.org/living-with-diabetes/treatment-and-care/">Diabetes.Org link</a></li>
    </string>
    <string name="DiabetesLink2">

    </string>
    <string name="cardTitleFAQs2">Blood pressure</string>
    <string name="cardContentFAQs2">  <li><b>Blood pressure</b> is the measure of the force of blood pushing against blood vessel walls.</li> \n
       <li> The heart pumps blood into blood vessels, which carry the blood throughout the body.</li> \n
        <li>High blood pressure, also called hypertension, is dangerous because it makes the heart work harder to pump blood out to the body
            and contributes to hardening of the arteries, or atherosclerosis, to stroke, kidney disease, and to heart failure.</li></string>
    <string name="BloodPressureTreatment">
        <li>Everyone with high blood pressure is advised to make healthy lifestyle changes.</li>\n
        <li>Whether medication is recommended depends on your blood pressure reading and your risk of developing problems such as heart attacks or strokes.</li> \n
        <ul><li>Your doctor will carry out some blood and urine tests, and ask questions about your health to determine your risk of other problems: </li></ul>\n

           <ul> <li><b>if your blood pressure is consistently above 140\/90mmHg \(or 135\/85mmHg at home\) </b>but your risk of other problems is low \– you\'ll be advised to make some changes to your lifestyle</li>\n
            <li><b>if your blood pressure is consistently above 140\/90mmHg \(or 135\/85mmHg at home\)</b> and your risk of other problems is high \– you\'ll be offered medication to lower your blood pressure, in addition to lifestyle changes</li>\n
        <li><b>if your blood pressure is consistently above 160\/100mmHg</b> \– you\'ll be offered medication to lower your blood pressure, in addition to lifestyle changes</li></ul>


    </string>
    <string name="BloodPressureLink">
        <li><a href="https://www.nhs.uk/conditions/high-blood-pressure-hypertension/">NHS Link</a></li>
        \n \n
        <li><a href="https://www.healthline.com/health/high-blood-pressure-hypertension-treatment">Health Line Link</a></li>
    </string>
    <string name="cardTitleFAQs3">Hepatitis C</string>
    <string name="RestPassword">Reset Password</string>
    <string name="username">Username</string>
    <string name="btn_activity_id_trusted">Let\'s Start</string>
    <string name="txt_activity_reg">Already Have Account?</string>
    <string name="btn_activity_reg">Login</string>
    <string name="title_xml_activity_trusted_login">Trusted Person Login</string>
    <string name="btn_forget_pass_activity">Forget password ?</string>
    <string name="title_create_account_activity">Create New An Account?</string>
    <string name="btn_reg_activity">Register</string>
    <string name="profile_loading">Loading...</string>
    <string name="profile_mail">Email: </string>
    <string name="profile_ph">Your Number: </string>
    <string name="profile_Tph">Trusted Number: </string>
    <string name="profile_user_name">User Name: </string>
    <string name="profile_pic">Change Picture</string>
    <string name="profile_save">Save</string>
</resources>