<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/registeration_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/user_name_User"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/gray" />


                <EditText
                    android:id="@+id/user_email_User"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/gray" />

                <EditText
                    android:id="@+id/user_password_User"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/gray"
                    />

                <EditText
                    android:id="@+id/user_phone_number_User"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/gray" />

                <EditText
                    android:id="@+id/trusted_phone_number_User"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="@string/phone_number2"
                    android:inputType="phone"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/gray" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/user_age_User"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:ems="10"
                        android:focusable="true"
                        android:hint="@string/age"
                        android:inputType="number"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColorHint="@color/gray" />

                    <Spinner
                        android:id="@+id/user_genderSpinner_User"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:spinnerMode="dropdown"
                        android:textAlignment="center" />

                </LinearLayout>


                <Button
                    android:id="@+id/user_create_new_account_button_User"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_below="@+id/create_new_account_button"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/btn_activity_id_trusted"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/lightgray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txt_activity_reg"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <Button
                android:id="@+id/user_login_button_User"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_below="@+id/create_new_account_button"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/black"
                android:text="@string/btn_activity_reg"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="17sp"
                android:textStyle="bold"/>

        </LinearLayout>


    </ScrollView>



</android.support.constraint.ConstraintLayout>