<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_fitting">

    <RelativeLayout
        android:id="@+id/layout"
        style="@style/layout_fitting">


        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:foregroundGravity="center"
            android:scaleType="centerCrop"
            app:srcCompat="@color/white" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"

            android:id="@+id/profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:clickable="true"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/man"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="3dp" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:paddingBottom="24dp">


            <ImageView
                android:id="@+id/edit_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="55dp"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_gallery" />


            <EditText
                android:id="@+id/ed_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="50dp"
                android:layout_alignParentRight="@+id/txt_mail"
                android:text="@string/profile_loading"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignLeft="@+id/user_name"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="20dp"
                android:text="@string/profile_user_name"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_below="@+id/edit_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="14dp"
                android:layout_alignParentRight="true"
                android:text="@string/profile_pic"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- <TextView
                 android:id="@+id/location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/designation"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:text="Surat"
                 android:textColor="#fff"
                 android:textSize="16sp" />-->

            <!--<TextView
                android:id="@+id/designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="(Adhyaksh)"
                android:textColor="#fff"
                android:textSize="18sp" />-->
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_layout"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="20dp"
            android:paddingRight="5dp"
            android:paddingBottom="20dp">

            <LinearLayout style="@style/layout_design_content">

                <TextView
                    style="@style/text_head"
                    android:text="@string/profile_mail" />

                <TextView
                    android:id="@+id/ed_email"
                    style="@style/text_fire_content"
                    android:text="@string/profile_loading" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ed_lin_ph1"
                style="@style/layout_design_content">

                <TextView
                    style="@style/text_head"
                    android:text="@string/profile_ph" />

                <EditText
                    android:id="@+id/ed_ph_user"
                    style="@style/text_fire_content"
                    android:text="@string/profile_loading"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ed_lin_ph2"
                style="@style/layout_design_content">

                <TextView
                    android:text="@string/profile_Tph"
                    style="@style/text_head"
                    />

                <EditText
                    android:id="@+id/ed_ph"
                    android:text="@string/profile_loading"
                    style="@style/text_fire_content"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnSaveData"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/actionbar_background"
                android:text="@string/profile_save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>